# project-chess-masters

./: .gitignore  Cargo.toml  README.md  checklist.md  part1.md  part2.md
src/: audio.rs  board.rs  bot.rs  bounds.rs  chess_pieces.rs  components.rs  coordinates.rs  field.rs  game_over.rs  game_paused.rs  lib.rs  main.rs  main_menu.rs  mod.rs  moves.rs  ui.rs  user_input.rs
