[package]
name = "chess_masters"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3